<resources>
    <string name="app_name">Sanmeigaku</string>

    <!--共通-->
    <string name="common_name_title_text">"名前"</string>
    <string name="common_kana_title_text">"カナ"</string>
    <string name="common_birthday_title_text">"生年月日"</string>
    <string name="common_gender_title_text">"性別"</string>
    <string name="common_moku_text">木</string>
    <string name="common_ka_text">火</string>
    <string name="common_do_text">土</string>
    <string name="common_gon_text">金</string>
    <string name="common_sui_text">水</string>
    <string name="common_kouboku_text">甲</string>
    <string name="common_otsuboku_text">乙</string>
    <string name="common_heika_text">丙</string>
    <string name="common_teika_text">丁</string>
    <string name="common_bodo_text">戊</string>
    <string name="common_kido_text">己</string>
    <string name="common_koukin_text">庚</string>
    <string name="common_shinkin_text">辛</string>
    <string name="common_jinsui_text">壬</string>
    <string name="common_kisui_text">癸</string>

    <!--タブ-->
    <string name="tab_meishiki">命式</string>
    <string name="tab_isouhou">位相法</string>
    <string name="tab_kizuhachimon">気図・八門法</string>
    <string name="tab_suuri">数理法</string>
    <string name="tab_rokushin">六親法</string>

    <!--メイン画面-->
    <string name="main_registrant_button">登録者リスト</string>
    <string name="main_divine_button">鑑定</string>
    <string name="main_save_button">保存</string>

    <!--命式画面-->
    <string name="meishiki_save_button">保存</string>
    <string name="meishiki_registrant_button">登録者リスト</string>
    <string name="meishiki_birthday_text">%1$d年%2$d月%3$d日</string>
    <string name="meishiki_age_text">%1$d歳</string>
    <string name="meishiki_gender_male_text">男性</string>
    <string name="meishiki_gender_female_text">女性</string>
    <string name="meishiki_zoukan_flag">*</string>
    <string-array name="meishiki_taiun_cycle_array">
        <item>初旬</item>
        <item>二旬</item>
        <item>三旬</item>
        <item>四旬</item>
        <item>五旬</item>
        <item>六旬</item>
        <item>七旬</item>
        <item>八旬</item>
        <item>九旬</item>
    </string-array>

    <!--位相法画面-->
    <string name="isouhou_sangoukaikyoku_text">三合会局</string>
    <string name="isouhou_sangoukaikyoku_moku_text">三合木局</string>
    <string name="isouhou_sangoukaikyoku_ka_text">三合火局</string>
    <string name="isouhou_sangoukaikyoku_gon_text">三合金局</string>
    <string name="isouhou_sangoukaikyoku_sui_text">三合水局</string>
    <string name="isouhou_hankai_text">半会</string>
    <string name="isouhou_hankai_moku_text">木性</string>
    <string name="isouhou_hankai_ka_text">火性</string>
    <string name="isouhou_hankai_gon_text">金性</string>
    <string name="isouhou_hankai_sui_text">水性</string>
    <string name="isouhou_shigou_text">支合</string>
    <string name="isouhou_shigou_tou_text">東方支合 木性</string>
    <string name="isouhou_shigou_nan_text">南方支合 火性</string>
    <string name="isouhou_shigou_sei_text">西方支合 金性</string>
    <string name="isouhou_shigou_hoku_text">北方支合 水性</string>
    <string name="isouhou_shigou_chu_text">中央支合 木性・土性</string>
    <string name="isouhou_shigou_ten_text">天軸支合 金性・土性</string>
    <string name="isouhou_housani_text">方三位</string>
    <string name="isouhou_housani_tou_text">東方三位</string>
    <string name="isouhou_housani_nan_text">南方三位</string>
    <string name="isouhou_housani_sei_text">西方三位</string>
    <string name="isouhou_housani_hoku_text">北方三位</string>
    <string name="isouhou_taichu_text">対冲</string>
    <string name="isouhou_taichu_shisei_text">四正</string>
    <string name="isouhou_taichu_shise_text">四勢</string>
    <string name="isouhou_taichu_shiko_text">四庫</string>
    <string name="isouhou_kei_text">刑</string>
    <string name="isouhou_kei_ji_text">自刑</string>
    <string name="isouhou_kei_ouki_text">旺気刑</string>
    <string name="isouhou_kei_seiki_text">生貴刑</string>
    <string name="isouhou_kei_koki_text">庫気刑</string>
    <string name="isouhou_ha_text">破</string>
    <string name="isouhou_gai_text">害</string>
    <string name="isouhou_gai_tou_text">東方害</string>
    <string name="isouhou_gai_nan_text">南方害</string>
    <string name="isouhou_gai_sei_text">西方害</string>
    <string name="isouhou_gai_hoku_text">北方害</string>
    <string name="isouhou_gai_chu_text">中央害</string>
    <string name="isouhou_gai_ten_text">天軸害</string>
    <string name="isouhou_kakuhou_text">格法</string>
    <string name="isouhou_kyokuhou_text">局法</string>
    <string name="isouhou_tenchusatsu_text">天中殺</string>
    <string name="isouhou_ijokanshi_text">異常干支</string>
    <string name="isouhou_shugoshin_text">守護神</string>
    <string name="isouhou_isoulist_title_age_text">年齢</string>
    <string name="isouhou_isoulist_title_taiun_text">大運</string>
    <string name="isouhou_isoulist_title_nenun_text">年運</string>
    <string name="isouhou_isoulist_title_isouhou_text">位相法</string>

    <!--気図・八門法画面-->
    <string name="kizu_hachimon_kizu_title_text">気図法</string>
    <string name="kizu_hachimon_hachimon_title_text">八門法</string>
    <string name="kizu_hachimon_scoretable_total_text">総数</string>

    <!--数理法画面-->
    <string name="suuri_gogyou_button">五行</string>
    <string name="suuri_jukkan_button">十干</string>
    <string name="suuri_scoretable_title_age_text">年齢</string>
    <string name="suuri_scoretable_title_difference_text">差数</string>
    <string name="suuri_scoretable_title_displacement_text">変位</string>
    <string name="suuri_scoretable_title_capacity_text">容力</string>
    <string name="suuri_scoretable_title_total_text">総数</string>

    <!--六親法画面-->
    <string name="rokushin_roku_title_text">六親法</string>
    <string name="rokushin_juni_title_text">十二親干法</string>
    <string name="rokushin_relative_empty_text">"　"</string>

    <!--登録者一覧画面-->
    <string name="registrant_title_text">登録者一覧</string>
    <string name="registrant_back_button">戻る</string>
    <string name="registrant_search_button">検索</string>
    <string name="registrant_name_text">名前</string>
    <string name="registrant_kana_text">カナ</string>
    <string name="registrant_birthday_text">生年月日</string>
    <string name="registrant_gender_text">性別</string>
    <string name="registrant_gender_male_text">男性</string>
    <string name="registrant_gender_female_text">女性</string>
    <string name="registrant_setting_button">設定</string>
    <string name="registrant_divine_button">鑑定</string>

    <!--依頼人情報入力フォーム-->
    <string name="client_info_name_title_text">"名前　　："</string>
    <string name="client_info_kana_title_text">"カナ　　："</string>
    <string name="client_info_birthday_title_text">"生年月日："</string>
    <string name="client_info_birthday_button">選択</string>
    <string name="client_info_gender_title_text">"性別　　："</string>
    <string name="client_info_gender_male_text">男性</string>
    <string name="client_info_gender_female_text">女性</string>

    <!--ダイアログ-->
    <string name="dialog_title_caution">注意</string>
    <string name="dialog_title_confirm">確認</string>
    <string name="dialog_registrant_title">設定</string>
    <string name="dialog_registrant_message_add">入力した登録者情報を追加します。</string>
    <string name="dialog_registrant_message_update_delete">現在の登録者情報を更新、または削除します。</string>
    <string name="dialog_registrant_message_failed">登録者情報の取得に失敗しました。</string>
    <string name="dialog_registrant_message_confirm_update">%s の登録情報をを更新しますか？</string>
    <string name="dialog_registrant_message_confirm_delete">%s の登録情報を削除しますか？</string>
    <string name="dialog_registrant_label_add">登録</string>
    <string name="dialog_registrant_label_update">更新</string>
    <string name="dialog_registrant_label_delete">削除</string>
    <string name="dialog_registrant_label_cancel">キャンセル</string>
    <string name="dialog_failed_db_setup_message">データベースの作成、更新に失敗しました。</string>
    <string name="dialog_input_form_not_filled_in_message">が未入力です。</string>
    <string name="dialog_failed_set_date_range_message">日付選択範囲の取得に失敗しました。\n日付の選択はできません。</string>
    <string name="dialog_failed_input_date_formant_message">生年月日の入力形式が正しくない、または存在しない日付を入力してます。\n記入例のように、年月日をそれぞれ / で区切って入力してください。\n (記入例) 2000/01/01</string>
    <string name="dialog_failed_input_date_range_message">生年月日は下記の範囲内で入力してください。</string>
    <string name="dialog_failed_add_registrant_list_message">登録者リストへの登録に失敗しました。</string>
    <string name="dialog_failed_add_registrant_list_message_unique">入力した情報は、すでに登録されてます。</string>
    <string name="dialog_label_ok">OK</string>
    <string name="dialog_label_yes">はい</string>
    <string name="dialog_label_no">いいえ</string>

    <!--トースト-->
    <string name="toast_succeeded_add_registrant_list_message">登録しました。</string>
    <string name="toast_succeeded_update_registrant_list_message">更新しました。</string>
    <string name="toast_succeeded_delete_registrant_list_message">削除しました。</string>
</resources>