<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/isouhou_isoulist_age_weight"
            android:text="@string/isouhou_isoulist_title_age_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/isouhou_isoulist_taiun_weight"
            android:text="@string/isouhou_isoulist_title_taiun_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/isouhou_isoulist_nenun_weight"
            android:text="@string/isouhou_isoulist_title_nenun_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/isouhou_isoulist_isouhou_weight"
            android:text="@string/isouhou_isoulist_title_isouhou_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/isouList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />
</LinearLayout>